created HTML pages for Project Explorer

--- a/app/public/project-explorer/Search.html
+++ b/app/public/project-explorer/Search.html
@@ -1,17 +1,29 @@
-<header><h1>Project Explorer</h1>                                                                      
-    <h2>One Stop Database For Academic Projects </h2>
-    </header>
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>  
+<body>   
+    <h1>Project Explorer</h1> 
+    <h2>One Stop Database For Academic Project</h2>                                            
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
     <a href= "register.html">Register</a>
         </nav>
+        <main>
+            
+            
 <h3>Search Project By</h3>
 <form>
 <label for="project Name,Authors,Abstract,Tags"> </label>
 <input type="text" name="project Name,Authors,Abstract,Tags" placeholder=" project Name,Authors,Abstract,Tags"></form>
-
+<p></p>
 <header>Search By:</header><form>
 
 <select for="name" id="Name">
@@ -25,12 +37,18 @@
 <input type="Submit" value="Search"><br><br>
 <h2>Search Result</h2>
 <h3>Project 1</h3>
-<ul><li>Name: Project 1</li></ul>
-<ul><li>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li></ul>
-<ul><li>Program: Computer Science</li></ul>
-<ul><li>Authors: Favour chidinma, Khafi Grace</li></ul>
-<ul><li>Tags: #blprt,#Gisw</li></ul>
-<ul><li>Year: 2018</li></ul>
+<ul>
+<li>Name: Project 1</li>
+<li>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li>
+<li>Program: Computer Science</li>
+<li>Authors: Favour chidinma, Khafi Grace</li>
+<li>Tags: #blprt,#Gisw</li>
+<li>Year: 2018</li>
+</ul>
+</main>
+</body>
+</html>
+
 
 
 
