--- a/app/public/project-explorer/Viewproject.html
+++ b/app/public/project-explorer/Viewproject.html
@@ -1,25 +1,42 @@
-<header><h1>Project Explorer</h1>                                                                      
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>     
+    <h1>Project Explorer</h1>                                                        
     <h2>One Stop Database For Academic Projects </h2>
-    </header>
+    
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
     <a href= "register.html">Register</a>
     </nav>
+    <main>
 <h3>Project 1</h3>
 <a href="edit.html">Edit Project</a>
-<ul><li>Created by: Favour Chidinma</li></ul> 
-<ul><li>Date Created: 00/00/0000</li></ul>
-<ul><li>Last Updated: 00/01/0001</li></ul>
+<ul>
+<li>Created by: Favour Chidinma</li>
+<li>Date Created: 00/00/0000</li>
+<li>Last Updated: 00/01/0001</li>
+</ul>
 <h3>Project Abstract</h3>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam adipiscing vitae proin sagittis nisl rhoncus mattis. Sem et tortor consequat id porta nibh venenatis cras sed. Orci a scelerisque purus semper eget duis at tellus at. Suscipit adipiscing bibendum est ultricies integer quis. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Magna sit amet purus gravida quis blandit turpis cursus. Commodo nulla facilisi nullam vehicula ipsum a arcu. Fames ac turpis egestas sed tempus urna et pharetra pharetra. Hendrerit gravida rutrum quisque non tellus orci ac auctor augue. Dapibus ultrices in iaculis nunc sed. Nunc consequat interdum varius sit amet mattis vulputate. Vestibulum morbi blandit cursus risus at. Facilisis leo vel fringilla est. Bibendum at varius vel pharetra vel turpis nunc eget. Leo in vitae turpis massa sed elementum. Vulputate ut pharetra sit amet aliquam id diam maecenas ultricies.
 <h3>Project Details</h3>
-<ul><li>Authors: Favour Chidinma, Khafi Grace</li></ul>
- <ul><li>Tags:#Asphyx,#GSW</li></ul>
-<ul><li>Project Files: <a href="edit.html">File 1,File 2</a></li></ul>
+<ul>
+<li>Authors: Favour Chidinma, Khafi Grace</li>
+ <li>Tags:#Asphyx,#GSW</li>
 
-
+<li>Project Files: <a href="edit.html">File 1,File 2</a></li>
+</ul>
+</main>
+</body>
+</html>
 
 
 
