--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -1,16 +1,29 @@
-<header><h1>Project Explorer</h1>                                                                      
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>  
+    <h1>Project Explorer</h1>                                                         
     <h2>One Stop Database For Academic Projects </h2>
-    </header>
+    
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
     <a href= "register.html">Register</a>
     </nav>
+    <main>
 <h3>Project 1</h3>
-<ul><li>Created by: Favour chidinma</li></ul> 
-<ul><li>Date Created: 00/00/0000</li></ul>
-<ul><li>Last Updated: 00/01/0001</li></ul>
+<ul>
+<li>Created by: Favour chidinma</li>
+<li>Date Created: 00/00/0000</li>
+<li>Last Updated: 00/01/0001</li>
+</ul>
 <h2>Edit Project</h2>
 <header>Project Name:</header><input type="text"><br><br>
 <header>Project Abstract:</header><input type="text"><br><br>
@@ -18,6 +31,9 @@
 <header>Tags(s):</header><input type="text"><br><br>
 <header>Upload File</header> <input type=submit value="Choose File">No file chosen</p>
 <input type="Submit" value="Submit">
+</main>
+</body>
+</html>
 
 
 
