--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -1,4 +1,14 @@
-<header><h1>  Project Explorer</h1>                                                                      
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>
+  <h1>Project Explorer</h1>                                                                   
     <h2>One Stop Database For Academic Projects </h2>
     </header>
     <nav>
@@ -7,6 +17,7 @@
     <a href= "Login.html">Login</a>
     <a href= "register.html">Register</a>
 </nav>
+<main>
 <h1>Signup</h1>
 <form action="action_page.php">
 <label for="first name"> First Name: </label><input type ="text" name ="firstname"/><br><br>
@@ -35,6 +46,9 @@
                             <br><br>
                                <input type="submit" value="Submit">
                         </form>
+</main>
+</body>
+</html>
 
 
 
