--- a/app/public/project-explorer/Createproject.html
+++ b/app/public/project-explorer/Createproject.html
@@ -1,6 +1,16 @@
-<header><h1>Project Explorer</h1>                                                                      
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>  
+    <h1>Project Explorer</h1>                                                             
     <h2>One Stop Database For Academic Projects </h2>
-    </header>
+    
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
@@ -8,6 +18,7 @@
     <a href= "register.html">Register</a>
     
     </nav>
+    <main>
 <h2>Submit Project</h2>
 <header>Project Name:</header><input type="text"><br><br>
 <header>Project Abstract:</header><input type="text"><br><br>
@@ -15,7 +26,9 @@
 <header>Tags(s):</header><input type="text"><br><br>
 <form><p></p>
     <input type=Submit value="Submit"></form>
-
+    </main>
+</body>
+</html>
 
 
 
