--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -1,4 +1,18 @@
-<header><h1>Project Explorer</h1>                                                                      
+
+    <!Doctype html>
+    <html lang= "en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>
+
+    
+  <header>  
+  <h1>Project Explorer</h1>                                                                      
 <h2>One Stop Database For Academic Projects </h2>
 </header>
 <nav>
@@ -8,24 +22,33 @@
 <a href="register.html">Register</a>
 <a href="Createproject.html">Submit</a>
 </nav>
-<main><p>This application allows you to explore various academic projects you can search,upload and browse projects</p></main>
+<main>
+<p>This application allows you to explore various academic projects you can search,upload and browse projects</p></main>
 <header><h1> Project list</h1></header>
 <h2> Project 1</h2>
-<ul><li>Name: Favour chi</li></ul>
-<ul><li>Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li></ul>
-<ul><li>Program:Computer Science</li></ul>
-<ul><li>Year:2018</li></ul>
+<ul>
+<li>Name: Favour chi</li>
+<li>Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li>
+<li>Program:Computer Science</li>
+<li>Year:2018</li>
+ </ul>
 <h2>Project 2</h2>
-<ul><li>Name:khafi Grace</li></ul>
-<ul><li>Descriprition:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li></ul>
-<ul><li>Program:Computer Science</li></ul>
-<ul><li>Year:2019</li></ul>
+<ul>
+<li>Name:khafi Grace</li>
+<li>Descriprition:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li>
+<li>Program:Computer Science</li>
+<li>Year:2019</li>
+</ul>
 <h3> Project 3</h3>
-<ul><li>Name: Mercy Thompson</li></ul>
-<ul><li>Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li></ul>
-<ul><li>Program:Computer Science </li></ul>
-<ul><lI>Year:2020</lI></ul>
-
+<ul>
+<li>Name: Mercy Thompson</li>
+<li>Description:Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis lectus magna fringilla urna porttitor.</li>
+<li>Program:Computer Science </li>
+<li>Year:2020</li>
+</ul>
+</main>
+</body>
+</html>
 
 
 
