--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -1,4 +1,14 @@
-<header><h1>Project Explorer</h1>                                                                      
+<!Doctype html>
+<html lang= "en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
+
+<title>Project Explorer</title>
+</head>
+<body>
+    <h1>Project Explorer</h1>                                                                     
     <h2>One Stop Database For Academic Projects </h2>
     </header>
     <nav>
@@ -8,9 +18,13 @@
 <a href="register.html">Register</a>
 
     </nav>
+    <main>
 <h1>Login</h1>
 <form>
 <label for="email"> Email address: </label><Input type="text" name="email address"/><br><br>
 <label for= "password"> Password: </label><input type="text" name="password"/><br><br>
 <input type="Submit" value="Submit"><br></br>
 </form>
+    </main>
+</body>
+</html>
