--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -14,14 +14,14 @@
   <header>  
   <h1>Project Explorer</h1>                                                                      
 <h2>One Stop Database For Academic Projects </h2>
-</header>
 <nav>
 <a href="index.html">Home</a>
-<a href= "search.html">Projects</a>
-<a href= "login.html">Login</a>
+<a href="search.html">Projects</a>
+<a href="login.html">Login</a>
 <a href="register.html">Register</a>
-<a href="Createproject.html">Submit</a>
+<a href="createproject.html">Submit</a>
 </nav>
+</header>
 <main>
 <p>This application allows you to explore various academic projects you can search,upload and browse projects</p></main>
 <header><h1> Project list</h1></header>
