--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -22,9 +22,9 @@
     <main>
 <h1>Login</h1>
 <form>
-<label for="email"> Email address: </label><Input type="text" name="email address"/><br><br>
+<label for="email"> Email Address: </label><Input type="text" name="email"/><br><br>
 <label for= "password"> Password: </label><input type="text" name="password"/><br><br>
-<input type="Submit" value="Submit"><br></br>
+<input type="Submit"><br></br>
 </form>
     </main>
 </body>
