--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Project Explorer</h1>                                                                     
     <h2>One Stop Database For Academic Projects </h2>
-    </header>
+   
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
@@ -19,12 +19,15 @@
 <a href="createproject.html">Submit</a>
 
     </nav>
+</header>
     <main>
 <h1>Login</h1>
 <form>
-<label for="email"> Email Address: </label><Input type="text" name="email"/><br><br>
-<label for= "password"> Password: </label><input type="text" name="password"/><br><br>
-<input type="Submit"><br></br>
+<label for="email"> Email Address: </label>
+<Input type="text" name="email"/><br><br>
+<label for= "password"> Password:</label>
+<input type="text" name="password"/><br><br>
+<input type="submit"><br></br>
 </form>
     </main>
 </body>
