created HTML pages for Project Explorer

--- a/app/public/project-explorer/editproject.html
+++ b/app/public/project-explorer/editproject.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
 
-<title>Project Explorer</title>
+<title>Project 1</title>
 </head>
-<body>  
+<body> 
+    <header>
     <h1>Project Explorer</h1>                                                         
     <h2>One Stop Database For Academic Projects </h2>
     
@@ -18,6 +19,7 @@
     <a href= "register.html">Register</a>
     <a href="createproject.html">Submit</a>
     </nav>
+    </header>
     <main>
 <h3>Project 1</h3>
 <ul>
@@ -31,7 +33,9 @@
 <header>Authors:</header><input type="text"><br><br>
 <header>Tags(s):</header><input type="text"><br><br>
 <header>Upload File</header> <input type=submit value="Choose File">No file chosen</p>
+<form action="editProject">
 <input type="Submit" value="Submit">
+</form>
 </main>
 </body>
 </html>
