--- a/app/public/project-explorer/Createproject.html
+++ b/app/public/project-explorer/Createproject.html
@@ -7,7 +7,8 @@
 
 <title>Project Explorer</title>
 </head>
-<body>  
+<body> 
+    <header>
     <h1>Project Explorer</h1>                                                             
     <h2>One Stop Database For Academic Projects </h2>
     
@@ -19,14 +20,17 @@
     <a href="createproject.html">Submit</a>
     
     </nav>
+    </header>
     <main>
 <h2>Submit Project</h2>
 <header>Project Name:</header><input type="text"><br><br>
 <header>Project Abstract:</header><input type="text"><br><br>
 <header>Authors:</header><input type="text"><br><br>
 <header>Tags(s):</header><input type="text"><br><br>
-<form><p></p>
-    <input type=Submit value="Submit"></form>
+<p></p>
+<form action="submitProject">
+    <input type=Submit value="Submit">
+    </form>
     </main>
 </body>
 </html>
