--- a/app/public/project-explorer/Search.html
+++ b/app/public/project-explorer/Search.html
@@ -7,7 +7,8 @@
 
 <title>Project Explorer</title>
 </head>  
-<body>   
+<body> 
+    <header>
     <h1>Project Explorer</h1> 
     <h2>One Stop Database For Academic Project</h2>                                            
     <nav>
@@ -17,11 +18,12 @@
     <a href= "register.html">Register</a>
     <a href="createproject.html">Submit</a>
         </nav>
+        </header>
         <main>
             
             
 <h3>Search Project By</h3>
-<form>
+<form action="searchForm">
 <label for="project Name,Authors,Abstract,Tags"> </label>
 <input type="text" name="project Name,Authors,Abstract,Tags" placeholder=" project Name,Authors,Abstract,Tags"></form>
 <p></p>
@@ -37,6 +39,7 @@
 </form>
 <input type="Submit" value="Search"><br><br>
 <h2>Search Result</h2>
+<div>
 <h3>Project 1</h3>
 <ul>
 <li>Name: Project 1</li>
@@ -45,6 +48,7 @@
 <li>Authors: Favour chidinma, Khafi Grace</li>
 <li>Tags: #blprt,#Gisw</li>
 <li>Year: 2018</li>
+</div>
 </ul>
 </main>
 </body>
