--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -29,19 +29,19 @@
                   <li><label for="graduation year: 2019">Graduation Year: 2019</li></label>
       </ul>
                         <h2>Update Profile</h2>
-                     <form>
+                     <form action="updateProfile">
                      <label for="first name:"> First Name:</label> <input type="text" name="firstname"/><br><br>
                      <label for="last name:"> Last Name: </label> <input type="text" name="lastname"/><br><br>
                      <label for="email address:"> Email Address: </label> <input type="text" name="email address"/><br><br>
                      <label for="matric number:"> Matric Number : </label> <input type="text" name="matric number"/><br><br>
                      <label for="program"> Program:</label>
-                     <select for="program" id="program"/>
+                     <select for="program" id="program">
                      <option value="computer science"> Computer Science</option>
                      <option value="computer_information system"> Computer Information System</option>
                      <option value="computer technology"> Computer Technology</option></select><br><br>
                       </form>
                      <label for="graduation year"> Graduation Year</label>
-                      <select for="graduation year" id="graduation year"/>
+                      <select for="graduation year" id="graduation year">
                       <option value="2013">2013</option>
                       <option value="2014">2014</option>
                       <option value="2015">2015</option>
@@ -54,7 +54,7 @@
                 </form>
                         <input type="submit" value="Submit"><br><br>
                      <h2>Change Password</h2>
-                      <form>
+                      <form action="changePassword">
                       <label for=" current password"> Current Password:</label> <input type="text"/><br><br>
 
   <label for=" New password"> New Password:</label> <input type="text"/><br><br>
