--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Project Explorer</h1>                                                                   
     <h2>One Stop Database For Academic Projects </h2>
-    </header>
+    
     <nav>
     <a href="index.html">Home</a>
     <a href= "search.html">Projects</a>
@@ -18,23 +18,26 @@
     <a href= "register.html">Register</a>
     <a href="createproject.html">Submit</a>
 </nav>
+</header>
 <main>
 <h1>Signup</h1>
-<form action="action_page.php">
-<label for="first name"> First Name: </label><input type ="text" name ="firstname"/><br><br>
-<label for="last name"> Last Name: </label><input type ="text" name="lastname"/><br><br>
-<label for="email address"> Email Address:<input type ="text" name="email address"/><br><br>
+<form>
+<label for="firstName"> First Name: </label><input type ="text" name ="firstName"/><br><br>
+<label for="lastName"> Last Name: </label><input type ="text" name="lastName"/><br><br>
+<label for="email"> Email Address:<input type ="text" name="email"/><br><br>
     <label for="password"> Password:<input type ="text" name="password"/><br><br>
-        <label for="matric number"></label> Matric Number:<input type ="text" name="email address"/><br><br>
+        <label for="matric Number"></label> Matric Number:<input type ="text" name="email"/><br><br>
             <label for="program">Program:</label>
+
               <select name="program" id="program">
-                <Option value="computer_science"> Computer Science</Option>
-                 <option value="computer_information_system"> Computer information System</option>
+                <Option value="computer_science">  Computer Science </Option>
+                 <option value="computer_information_system">Computer information System</option>
                    <option value="computer technology"> Computer Technology</option>
                      </select><br><br>
+
                     </form>
-                      <label for="graduation year"> Graduation Year:</label>
-                      <select name="graduation year" id="graduation year">
+                      <label for="graduation Year"> Graduation Year:</label>
+                      <select name="graduation Year" id="graduation Year">
                         <option value="2013"> 2013</option>
                         <option value="2014"> 2014</option>
                         <option value="2015"> 2015</option>
