--- a/app/public/project-explorer/index.html
+++ b/app/public/project-explorer/index.html
@@ -24,7 +24,7 @@
 </header>
 <main>
 <p>This application allows you to explore various academic projects you can search,upload and browse projects</p></main>
-<header><h1> Project list</h1></header>
+<header><h1> Project List</h1></header>
 <h2> Project 1</h2>
 <ul>
 <li>Name: Favour chi</li>
