--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -16,7 +16,7 @@
     <a href= "search.html">Projects</a>
     <a href= "Login.html">Login</a>
     <a href= "register.html">Register</a>
-    <a href="createproject.html">Submit</a>
+    
 </nav>
 </header>
 <main>
@@ -26,12 +26,12 @@
 <label for="lastName"> Last Name: </label><input type ="text" name="lastName"/><br><br>
 <label for="email"> Email Address:<input type ="text" name="email"/><br><br>
     <label for="password"> Password:<input type ="text" name="password"/><br><br>
-        <label for="matric Number"></label> Matric Number:<input type ="text" name="email"/><br><br>
+        <label for="matricNumber"></label> Matric Number:<input type ="text" name="matricNumber"/><br><br>
             <label for="program">Program:</label>
 
               <select name="program" id="program">
                 <Option value="computer_science">  Computer Science </Option>
-                 <option value="computer_information_system">Computer information System</option>
+                 <option value="computer_information_system">Computer Information System</option>
                    <option value="computer technology"> Computer Technology</option>
                      </select><br><br>
 
