--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -16,18 +16,18 @@
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
 <a href="register.html">Register</a>
-<a href="createproject.html">Submit</a>
+
 
     </nav>
 </header>
     <main>
 <h1>Login</h1>
 <form>
-<label for="email"> Email Address: </label>
-<Input type="text" name="email"/><br><br>
-<label for= "password"> Password:</label>
-<input type="text" name="password"/><br><br>
-<input type="submit"><br></br>
+<label for="email"> Email Address: </label><Input type="text" name="email"/><br><br>
+
+<label for= "password"> Password:</label><input type="text" name="password"/><br><br>
+
+<input type="submit" value="submit"><br></br>
 </form>
     </main>
 </body>
