Created HTML pages for Project Explorer

--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -16,6 +16,8 @@
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
     <a href= "register.html">Register</a>
+    <a href="createproject.html">Submit</a>
+
     
            </nav>
            <main>
@@ -57,7 +59,7 @@
                 </form>
                         <input type="submit" value="Submit"><br><br>
                         </div>
-                     <h2>Change Password</h2>
+                     <header>Change Password</header>
                       <form action="changePassword">
                       <label for=" currentPassword"> Current Password:</label> <input type="text"/><br><br>
 
