--- a/app/public/project-explorer/Createproject.html
+++ b/app/public/project-explorer/Createproject.html
@@ -17,6 +17,8 @@
     <a href= "search.html">Projects</a>
     <a href= "login.html">Login</a>
     <a href= "register.html">Register</a>
+    <a href="createproject.html">Submit</a>
+
     
     
     </nav>
