--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -16,6 +16,8 @@
     <a href= "search.html">Projects</a>
     <a href= "Login.html">Login</a>
     <a href= "register.html">Register</a>
+    <a href="createproject.html">Submit</a>
+
     
 </nav>
 </header>
