Created HTML pages for Project Explorer

--- a/app/public/project-explorer/Createproject.html
+++ b/app/public/project-explorer/Createproject.html
@@ -25,12 +25,12 @@
     </header>
     <main>
 <h2>Submit Project</h2>
-<label for="name"><header>Project Name:</header></label> <input type="text" name="name"/><br></br>
-<label for="abstract"><header>Project Abstract: </header></label><textarea type="text" name="abstract"></textarea><br></br>
-<label for="authors"><header>Authors:</header></label><input type="text" name="authors"/><br></br>
-<label for="tags"><header>Tags(s): </header></label><input type="text" name="tags"/><br></br>
-<p></p>
-<form action="submitProject">
+<form name="submitProject">
+<label for="name">Project Name:</label> <input type="text" name="name"/><br></br>
+<label for="abstract">Project Abstract: </label><textarea type="text" name="abstract"></textarea><br></br>
+<label for="authors">Authors:</label><input type="text" name="authors"/><br></br>
+<label for="tags">Tags(s): </label><input type="text" name="tags"/><br></br>
+
     <input type="submit" value="Submit">
     </form>
     </main>
