--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -25,9 +25,9 @@
     <main>
 <h1>Login</h1>
 <form>
-<label for="email"> Email Address: </label><Input type="text" name="email"/><br><br>
+<label for="email"> Email Address: </label><Input type="email" name="email"/><br><br>
 
-<label for= "password"> Password:</label><input type="text" name="password"/><br><br>
+<label for= "password"> Password:</label><input type="password" name="password"/><br><br>
 
 <input type="submit" value="submit"><br></br>
 </form>
