--- a/app/public/project-explorer/profile.html
+++ b/app/public/project-explorer/profile.html
@@ -34,19 +34,18 @@
       </div>
                   <div>     
                         <h2>Update Profile</h2>
-                     <form action="updateProfile">
-                     <label for="firstName:"> First Name:</label> <input type="text" name="firstName"/><br><br>
-                     <label for="lastName:"> Last Name: </label> <input type="text" name="lastName"/><br><br>
-                     <label for="email:"> Email Address: </label> <input type="text" name="email"/><br><br>
-                     <label for="matricNumber:"> Matric Number : </label> <input type="text" name="matricNumber"/><br><br>
+                     <form name="updateProfile">
+                     <label for="firstName"> First Name:</label> <input type="text" name="firstName"/><br><br>
+                     <label for="lastName"> Last Name: </label> <input type="text" name="lastName"/><br><br>
+                     <label for="email"> Email Address: </label> <input type="text" name="email"/><br><br>
+                     <label for="matricNumber"> Matric Number : </label> <input type="text" name="matricNumber"/><br><br>
                      <label for="program"> Program:</label>
-                     <select for="program" id="program">
-                     <option value="computer science"> Computer Science</option>
-                     <option value="computer_information system"> Computer Information System</option>
-                     <option value="computer technology"> Computer Technology</option></select><br><br>
-                      </form>
+                     <select for="program" name="program">
+                     <option value="computer_science"> Computer Science</option>
+                     <option value="computer_information_system"> Computer Information System</option>
+                     <option value="computer_technology"> Computer Technology</option></select><br><br>
                      <label for="graduationYear"> Graduation Year</label>
-                      <select for="graduationYear" id="graduationYear">
+                      <select for="graduationYear" name="graduationYear">
                       <option value="2013">2013</option>
                       <option value="2014">2014</option>
                       <option value="2015">2015</option>
@@ -56,17 +55,16 @@
                       <option value="2019">2019</option>
                       <option value="2020">2020</option>
                     </select><br><br>
-                </form>
                         <input type="submit" value="Submit"><br><br>
-                        </div>
-                     <header>Change Password</header>
-                      <form action="changePassword">
-                      <label for=" currentPassword"> Current Password:</label> <input type="text"/><br><br>
+                     </form>
+                     <h3>Change Password</h3>
+                      <form name="changePassword">
+                      <label for=" currentPassword"> Current Password:</label> <input type="password"/><br><br>
 
-  <label for=" newPassword"> New Password:</label> <input type="text"/><br><br>
-<label for="confirmPassword">Confirm Password: </label><input type="text"><br><br>
+  <label for=" newPassword"> New Password:</label> <input type="password"/><br><br>
+<label for="confirmPassword">Confirm Password: </label><input type="password"><br><br>
 <input type="submit" Value="Submit">
-                      </div>
+                    
 
 </form>
 </main>
