--- a/app/public/project-explorer/register.html
+++ b/app/public/project-explorer/register.html
@@ -26,7 +26,7 @@
 <form>
 <label for="firstName"> First Name: </label><input type ="text" name ="firstName"/><br><br>
 <label for="lastName"> Last Name: </label><input type ="text" name="lastName"/><br><br>
-<label for="email"> Email Address:<input type ="text" name="email"/><br><br>
+<label for="email"> Email Address:<input type ="email" name="email"/><br><br>
     <label for="password"> Password:<input type ="password" name="password"/><br><br>
         <label for="matricNumber"></label> Matric Number:<input type ="text" name="matricNumber"/><br><br>
             <label for="program">Program:</label>
