Created HTML pages for Project Explorer

--- a/app/public/project-explorer/login.html
+++ b/app/public/project-explorer/login.html
@@ -1,36 +1,23 @@
-<!Doctype html>
-<html lang= "en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width-device-width, initial-scale-1.0">
-
-<title>Project Explorer</title>
-</head>
-<body>
-    <h1>Project Explorer</h1>                                                                     
-    <h2>One Stop Database For Academic Projects </h2>
-   
+<header>
+    <h1>Project Explorer</h1>
+    <h2>One Stop Database for Academic Projects</h2>
     <nav>
-    <a href="index.html">Home</a>
-    <a href= "search.html">Projects</a>
-    <a href= "login.html">Login</a>
-    <a href="register.html">Register</a>
-    <a href="createproject.html">Submit</a>
-
-
-
+        <a href='index.html'>Home</a>        
+        <a href='search.html'>Projects</a>
+        <a href='login.html'>Login</a>
+        <a href='register.html'>Register</a>
+        <a href='createproject.html'>Submit</a>
     </nav>
 </header>
-    <main>
-<h1>Login</h1>
-<form>
-<label for="email"> Email Address: </label><Input type="email" name="email"/><br><br>
-
-<label for= "password"> Password:</label><input type="password" name="password"/><br><br>
-
-<input type="submit" value="submit"><br></br>
-</form>
-    </main>
-</body>
-</html>
+<main>
+    <h1>
+        Login
+    </h1>
+    <form>
+        <label> Email Address:</label>
+        <input type='email' name='email'/>
+        <label>Password:</label>
+        <input type='password' name='password'/>
+        <input type='submit'/>
+    </form>
+</main>
