Created HTML pages for Project Explorer

--- a/app/public/project-explorer/Search.html
+++ b/app/public/project-explorer/Search.html
@@ -14,7 +14,7 @@
 <h2>Search Project By</h2>
 <form name='searchForm'>
     <input type='text' name='searchTerm' placeholder='Project Name, Authors, Abstract, Tags'/>
-    <label>Search By</label>
+    <label>Search By:</label>
     <select name='searchType'>
         <option value="Name">Name</option>
         <option value="Abstract">Abstract</option>
